clusters/talos-cluster/flow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flow
  namespace: flow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flow
  template:
    metadata:
      labels:
        app: flow
    spec:
      imagePullSecrets:
        - name: zot-pull-secret
      containers:
        - name: flow
          image: zot.maix.ovh/flow:v0.3.4
          ports:
            - name: grpc
              containerPort: 9090
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          livenessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 5
            periodSeconds: 5
