clusters/talos-cluster/flow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flow-service
  namespace: flow
spec:
  selector:
    app: flow
  ports:
    - name: grpc
      port: 9090
      targetPort: 9090
