clusters/talos-cluster/flow/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: temporal-ui-route
  namespace: temporal
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "flow.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flow-webhook-router
          port: 80
